статичный порт для traefik

--- a/script/template/docker.env.template
+++ b/script/template/docker.env.template
@@ -28,7 +28,7 @@ PUBLIC_IPV4=${PUBLIC_IPV4}
 PUBLIC_IPV6=${PUBLIC_IPV6}
 
 # Traefik
-PORT_LOCAL_TRAEFIK=${PORT_LOCAL_TRAEFIK}
+PORT_LOCAL_TRAEFIK=4443
 URI_TRAEFIK_DASHBOARD=${URI_TRAEFIK_DASHBOARD}
 
 # Caddy
