Обновлены шаблоны переменных окружения и скрипты для генерации htpasswd; удалены устаревшие строки и добавлены новые переменные для веб-сервисов.

--- a/docker-proxy/3x-ui/3x-ui.env
+++ b/docker-proxy/3x-ui/3x-ui.env
@@ -4,8 +4,8 @@ XRAY_VMESS_AEAD_FORCED=false
 
 USERNAME=admin
 PASSWORD=admin
-NEW_ADMIN_USERNAME=
-NEW_ADMIN_PASSWORD=
+NEW_ADMIN_USERNAME="${USER_WEB:-admin}"
+NEW_ADMIN_PASSWORD="${PASS_WEB:-admin}"
 
 webListen="0.0.0.0"
 webDomain=""
