--- a/script/template/docker.env.template
+++ b/script/template/docker.env.template
@@ -16,6 +16,10 @@
 #    - Не используйте устаревшие или неунифицированные имена!                   #
 #      (Do not use deprecated or non-unified names!)                            #
 #-------------------------------------------------------------------------------#
+# WEB-Services
+USER_WEB="${USER_WEB}"
+PASS_WEB="${PASS_WEB}"
+HT_PASS_ENCODED="${HT_PASS_ENCODED}"
 
 # Часовой пояс / Timezone
 TZ=Europe/Moscow
@@ -33,13 +37,6 @@ URI_TRAEFIK_DASHBOARD=${URI_TRAEFIK_DASHBOARD}
 
 # Caddy
 PORT_LOCAL_CADDYWEB=${PORT_LOCAL_CADDYWEB}
-
-# HaProxy
-URI_HAPROXY_STATS=${URI_HAPROXY_STATS}
-
-# CORSA
-URI_CORSA=${URI_CORSA}
-PORT_LOCAL_CORSA=${PORT_LOCAL_CORSA}
 
 # DOZZLE
 URI_DOZZLE=${URI_DOZZLE}
