--- a/script/template/install.env.template
+++ b/script/template/install.env.template
@@ -16,6 +16,11 @@ USER_SSH="${USER_SSH}"
 PASS_SSH="${PASS_SSH}"
 SSH_PBK="${SSH_PBK}"
 
+# WEB-Services
+USER_WEB="${USER_WEB}"
+PASS_WEB="${PASS_WEB}"
+HT_PASS_ENCODED="${HT_PASS_ENCODED}"
+
 ##### Пути и URI / Paths and URIs
 
 # Traefik
@@ -24,13 +29,6 @@ URI_TRAEFIK_DASHBOARD=${URI_TRAEFIK_DASHBOARD}
 
 # Caddy
 PORT_LOCAL_CADDYWEB=${PORT_LOCAL_CADDYWEB}
-
-# HaProxy
-URI_HAPROXY_STATS=${URI_HAPROXY_STATS}
-
-# CORSA
-URI_CORSA=${URI_CORSA}
-PORT_LOCAL_CORSA=${PORT_LOCAL_CORSA}
 
 # DOZZLE
 URI_DOZZLE=${URI_DOZZLE}
