feat: Update configuration and add new services
- Updated .gitignore to exclude files starting with 'ideas'.
- Enhanced docker-proxy/3x-ui/configs/config.json with new outbound rules for WARP-PLUS and added two inbound VLESS configurations.
- Added Dozzle service to docker-proxy/compose.yml for log viewing.
- Modified Traefik configuration files to improve security and logging.
- Updated install.sh to allow non-interactive execution of installation steps.
- Improved environment variable handling in 01_env.sh.
- Finalized installation summary generation in 08_finalize.sh with better template rendering.
- Created basicAuth middleware configuration in Traefik.
- Added Dozzle router and service configuration in Traefik dynamic settings.

--- a/docker-proxy/compose.yml
+++ b/docker-proxy/compose.yml
@@ -129,7 +129,29 @@ services:
         exec /entrypoint.sh "$@"
     networks:
       - traefik-proxy
-      
+
+  dozzle:
+    container_name: dozzle
+    image: amir20/dozzle:latest
+    restart: always
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+      - /opt/docker-proxy/.env
+    environment:
+      - DOZZLE_ENABLE_ACTIONS=true
+      - DOZZLE_BASE=/${URI_DOZZLE}
+    healthcheck:
+      test: ["CMD", "/dozzle", "healthcheck"]
+      interval: 3s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
+    networks:
+      - traefik-proxy
+    security_opt:
+      - no-new-privileges=true
+            
   3x-ui:
     image: torotin/3x-ui:latest
     container_name: 3x-ui
@@ -156,7 +178,7 @@ services:
       - /opt/docker-proxy/.env
       - /opt/docker-proxy/3x-ui/3x-ui.env
     environment:
-      - XUI_LOG_LEVEL=debug
+      # - XUI_LOG_LEVEL=debug
       - XUI_LOG_FOLDER=/var/log/3x-ui
 
   warp-plus:
