--- a/docker-proxy/traefik/dynamic/traefik-dashboard.yml
+++ b/docker-proxy/traefik/dynamic/traefik-dashboard.yml
@@ -2,35 +2,36 @@
 
 http:
   middlewares:
-    traefik-strip:
-      stripPrefix:
-        prefixes:
-          - "${URI_TRAEFIK_DASHBOARD}"
-    stats-auth:
-      basicAuth:
-        users:
-          - "${HT_PASS_ENCODED}"
+    # для UI остаётся ваш префикс-стрипер
+    rewrite-dashboard-path:
+      replacePathRegex:
+        regex: "^/${URI_TRAEFIK_DASHBOARD}/?(.*)"
+        replacement: "/$1"
 
   routers:
+    # 1) Все API-вызовы без префикса
+    traefik-api-root:
+      rule: "Host(`${WEBDOMAIN}`) && PathPrefix(`/api`)"
+      entryPoints:
+        - websecure
+      middlewares:
+        - basicAuth
+        - secured
+      tls:
+        certResolver: le
+      service: api@internal
+      priority: 100
+
+    # 2) UI по секретному префиксу
     traefik-ui:
       rule: "Host(`${WEBDOMAIN}`) && PathPrefix(`/${URI_TRAEFIK_DASHBOARD}`)"
       entryPoints:
         - websecure
       middlewares:
-        - traefik-strip
-        - stats-auth
+        - rewrite-dashboard-path
+        - basicAuth
         - secured
       tls:
         certResolver: le
       service: api@internal
-
-    traefik-api:
-      rule: "Host(`${WEBDOMAIN}`) && PathPrefix(`/api`)"
-      entryPoints:
-        - websecure
-      middlewares:
-        - stats-auth
-        - secured
-      tls:
-        certResolver: le
-      service: api@internal
+      priority: 99
