--- a/script/template/install.summary.template
+++ b/script/template/install.summary.template
@@ -13,20 +13,13 @@ Public IP    : {{PUBLIC_IPV4}}
 SSH Access:
   Port       : {{PORT_REMOTE_SSH}}
   User       : {{USER_SSH}}
-  Auth       : {{msg_pubkey_auth}}
-
+  Auth       : {{msg_pubkey_auth:-unspecified}}
 {{/if}}
 
 Available Services (via Caddy reverse proxy):
 
 - Main site            : https://{{WEBDOMAIN}}
 - 3X-UI Web Panel      : https://{{WEBDOMAIN}}/{{URI_PANEL_PATH}}/
+- Traefik Dashboard    : https://{{WEBDOMAIN}}/{{URI_TRAEFIK_DASHBOARD}}/
 - Dozzle Logs Viewer   : https://{{WEBDOMAIN}}/{{URI_DOZZLE}}/
 - AdGuard Home         : https://{{WEBDOMAIN}}/{{URI_ADGUARD_PANEL}}/
-- CORSA Proxy Service  : https://{{WEBDOMAIN}}/{{URI_CORSA}}/
-
-Installation script completed successfully.
-To start services: cd {{DOCKER_DIR}} && docker-compose up -d
-
-Summary saved to: {{summary_file}}
-
